<resources>
    <string name="app_name">Personal Safety Alert</string>
    <string name="txt_start_safety">Safety Alert OFF</string>
    <string name="txt_stop_safety">Safety Alert ON</string>
    <string name="desc_mobile_phone">Go to contact screen.</string>
    <string name="desc_pen_edit">Go to edit message replay text screen.</string>
    <string name="desc_long_press_contact">Use Contact to select to whom you preferred to receive alert message.</string>
    <string name="desc_long_press_edit_message">Use Reply Message to set custom message.</string>
    <string name="desc_long_press_visual_message">Use Visual Message to visualize your custom message in real time.</string>
    <string name="desc_menu_more">Popup menu to clear text list.</string>
    <string name="txt_message_text">Message text</string>
    <string name="txt_select_your_text">Select your text</string>
    <string name="txt_share">Share</string>
    <string name="txt_help">Help</string>
    <string name="txt_hide">HIDE</string>
    <string name="txt_sample_text_00">I am in trouble, A recorded audio is sent to your email.</string>
    <string name="txt_sample_text_01">I am in trouble, this is an emergency please help me.</string>
    <string name="txt_sample_text_02">I am in need, do reach me ASAP!</string>
    <string name="txt_sample_text_03">Emergency! something happened to me please reach me.</string>
    <string name="txt_sample_text_04">Emergency! Emergency!</string>
    <string name="popup_clear_all">Clear All</string>
    <string name="title_settings">Settings</string>
    <string name="title_not_working">Not Working ?</string>
    <string name="title_help">Help</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_settings_share">Invite a friend</string>
    <string name="txt_invite_a_friend">Invite a friend</string>
    <string name="desc_invite_a_friend">Share Personal Safety Alert app with your friends and family.</string>
    <string name="txt_how_to_use">How to use</string>
    <string name="txt_not_working">Not Working ?</string>
    <string name="txt_contact">Contact</string>
    <string name="txt_contact_us">Contact Us</string>
    <string name="desc_contact_us">Questions? Need Help?</string>
    <string name="txt_app_version">App Version</string>
    <string name="desc_version">1.0 version</string>
    <string name="desc_licensed">Copyright Personal Safety Alert \n<br />Licensed under the MIT License</string>
    <string name="desc_navigate_next">Navigate Next</string>
    <string name="desc_navigate_previous">Navigate previous</string>
    <string name="tag_fragment_contact">tag_fragment_contact</string>
    <string name="tag_fragment_message">tag_fragment_message</string>
    <string name="tag_fragment_visual_message">tag_fragment_visual_message</string>
    <string name="title_contact">Contact</string>
    <string name="title_custom_message">Custom message text</string>
    <string name="title_visual_message">Visual message text</string>
    <string name="hint_message_here">Message here</string>
    <string name="desc_information_logo">Information logo</string>
    <string name="desc_custom_message">Customize your short message that you want to be received indicating you\'re in an emergency and be read by your guardian.</string>
    <string name="desc_message_logo">Message logo</string>
    <string name="txt_done">Done</string>
    <string name="tag_fragment_message_to_visual">tag_fragment_message_to_visual</string>
    <string name="tag_fragment_message_to_home">tag_fragment_message_to_home</string>
    <string name="txt_sample_location"><![CDATA[Google Map Loction https://www.google.com/map/search/?api=1&query=14.55054,121059591]]></string>
    <string name="txt_sample_time">10:50 pm</string>
    <string name="desc_sim_logo">Sim logo</string>
    <string name="txt_sample_custom_message">Example: I am in need, do reach me ASAP!</string>
    <string name="tag_fragment_visual_to_home">tag_fragment_visual_to_home</string>
    <string name="desc_add_contact">Add contact from contact list</string>
    <string name="txt_single_person">Send to one specific contact</string>
    <string name="txt_contact_list">Send to list of contacts</string>
    <string name="txt_message_to">Message to</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_mobile_number">Mobile number</string>
    <string name="txt_email">Email</string>
    <string name="txt_location_permission_rational">Location permission is needed for core functionality</string>
    <string name="txt_send_sms_permission_rational">Send SMS permission is needed for core functionality</string>
    <string name="txt_audio_record_permission_rational">Audio Record permission is needed for core functionality</string>
    <string name="txt_storage_permission_rational">Storage permission is needed for core functionality</string>
    <string name="txt_permission_denied_explanation">Permission is denied, but is needed for core functionality</string>
    <string name="action_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="tag_fragment_home_to_permission">tag_fragment_home_to_permission</string>
    <string name="tag_fragment_permission_to_home">tag_fragment_permission_to_home</string>
    <string name="desc_location_permission_logo">Location permission logo</string>
    <string name="desc_location_permission_check">Location permission check</string>
    <string name="txt_location_permission_title">Location Access</string>
    <string name="txt_location_permission_desc">Read your location in real time</string>
    <string name="txt_allow_access">Allow Access</string>
    <string name="txt_send_sms_permission_title">Send SMS Access</string>
    <string name="txt_send_sms_permission_desc">Send emergency text to your love-ones</string>
    <string name="text_permission_reminder">This app needs permission access which is required to work correctly. If you don\'t feel comfortable with these permissions you can go to settings and modify it at any time.</string>
    <string name="txt_proceed">Proceed</string>
    <string name="txt_record_audio_permission_title">Record Audio Access</string>
    <string name="txt_record_audio_permission_desc">Record audio that you will send</string>
    <string name="txt_storage_permission_title">Storage Access</string>
    <string name="txt_storage_permission_desc">Select recorded audio on your device</string>
    <string name="desc_welcome_logo">Welcome logo</string>
    <string name="tag_activity_welcome_to_main">tag_activity_welcome_to_main</string>
    <string name="txt_skip">SKIP</string>
    <string name="txt_next_cap">NEXT</string>
    <string name="txt_got_it">GOT IT</string>
    <string name="tag_fragment_help_to_how_to">tag_fragment_help_to_how_to</string>
    <string name="tag_fragment_help_to_not_working">tag_fragment_help_to_not_working</string>
    <string name="tag_fragment_help_to_contact_us">tag_fragment_help_to_contact_us</string>
    <string name="txt_step_1">Step 1</string>
    <string name="txt_next_small">Next</string>
    <string name="txt_step_2">Step 2</string>
    <string name="desc_dummy_medium">Lorem ipsum, or lipsum as it is sometimes known, is dummy text.</string>
    <string name="txt_step_3">Step 3</string>
    <string name="txt_step_4">Step 4</string>
    <string name="txt_step_5">Step 5</string>
    <string name="tag_fragment_how_to_to_help">tag_fragment_how_to_to_help</string>
    <string name="desc_email_logo">Email logo</string>
    <string name="hint_describe_problem">Please describe your problem/suggestion</string>
    <string name="desc_add_ss_logo_click">Add ss logo click</string>
    <string name="desc_display_ss">Display image here.</string>
    <string name="txt_add_screenshot_optional">Add screenshot (Optional)</string>
    <string name="desc_add_screenshot">Attach screenshot of Personal Safety Alert screen.</string>
    <string name="txt_send">Send</string>
    <string name="tag_fragment_contact_us_to_help">tag_fragment_contact_us_to_help</string>
    <string name="txt_user_tried">I have tried all the methods in \"Not working ? screen, still it is not working.</string>
    <string name="txt_user_suggest">I have a suggestion.</string>
    <string name="txt_message">Message</string>
    <string name="desc_message">Add or customize your short message.</string>
    <string name="txt_visual_message">Visual Message</string>
    <string name="desc_visual_message">Where you can visualize your message.</string>
    <string name="desc_contact">Your contact preference that can be use to send emergency message.</string>
    <string name="txt_dummy_title">Lorem Ipsum</string>
    <string name="desc_dummy_large">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</string>
    <string name="desc_permission_sub_title">Needs your permission to work</string>
    <string name="desc_permission_sub_second_title">Press all icon to activate permissions</string>
    <string name="tag_fragment_contact_us_to_not_working">tag_fragment_contact_us_to_not_working</string>
    <string name="txt_edit">Edit</string>
    <string name="tag_fragment_contact_to_add_contact">tag_fragment_contact_to_add_contact</string>
    <string name="desc_contact_person_logo">Contact person logo</string>
    <string name="desc_contact_phone_number_logo">Contact phone number logo</string>
    <string name="txt_name">Name</string>
    <string name="txt_mobile">Mobile</string>
    <string name="txt_phone_number">Phone number</string>
    <string name="txt_email_address">Email address</string>
    <string name="txt_new_contact">List Of Available Device Contacts</string>
    <string name="desc_new_contact">Selecting contacts will be added to your list of person who\'ll received an emergency message.</string>
    <string name="tag_fragment_add_contact_to_contact">tag_fragment_add_contact_to_contact</string>
    <string name="tag_fragment_contact_to_update_contact">tag_fragment_contact_to_update_contact</string>
    <string name="txt_update_contact">Update contact</string>
    <string name="desc_update_contact">Make changes of contact details.</string>
    <string name="desc_dialog_logo">Dialog logo</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_location_updated">Location Updated: %1$s</string>
    <string name="action_done">Done</string>
    <string name="txt_information">Information</string>
    <string name="txt_register_user_name">Register user\'s name</string>
    <string name="txt_anonymous">Anonymous</string>
    <string name="desc_step_one">To add contact(s), click the phone icon on the upper right part of the screen.</string>
    <string name="desc_step_two">Once you are in Personal Safety app contact screen, there are two options on where to send your message.\n\n<br /><br />For “Send to this list of contacts” option, click add contact icon on the right side of “Send to this list of contacts”. Then register the name(s), mobile number(s) and the e-mail address of your preferred receiver. Click Done.\n\n<br /><br />For “Send to one specific contact” option, just put the mobile and number and the email address of the specific receiver.</string>
    <string name="desc_step_three">Turn-on the “Safety Alert” button by clicking it. This will turn on the GPS of your phone.</string>
    <string name="desc_step_four">You can choose a message that you want to send to your receiver from our default messages. You can also modify it ang put your preferred message.</string>
    <string name="desc_step_five">Press the power button three (3) times within five (5) seconds to send a message and/or email.</string>
    <string name="permission_overlay_title">Permit drawing over other apps</string>
</resources>