<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_default"
        tools:context=".ui.screen.contact.update.UpdateContactFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/update_contact_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height_default"
            android:background="@color/background_header_default"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/txt_update_contact"
                android:textColor="@color/text_color_black_900"
                android:textSize="@dimen/text_size_very_large"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/contact_header_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/contact_header_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/desc_update_contact"
                android:textColor="@color/text_color_black_900"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/update_contact_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_contact_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/add_contact_header">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/desc_contact_person_logo"
                        android:src="@drawable/ic_person" />

                    <EditText
                        android:id="@+id/update_contact_person_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_underline_color"
                        android:hint="@string/txt_name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:maxLength="60"
                        android:maxLines="1"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textCursorDrawable="@drawable/edt_cursor_color_primary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="7"
                        android:contentDescription="@string/desc_contact_phone_number_logo"
                        android:src="@drawable/ic_phone" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="15"
                        android:text="@string/txt_mobile"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/update_contact_phone_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="78"
                        android:background="@drawable/edt_underline_color"
                        android:hint="@string/txt_phone_number"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textCursorDrawable="@drawable/edt_cursor_color_primary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:weightSum="100">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="7"
                        android:contentDescription="@string/desc_contact_phone_number_logo"
                        android:src="@drawable/ic_email_normal" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="15"
                        android:text="@string/txt_email"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/update_contact_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="78"
                        android:background="@drawable/edt_underline_color"
                        android:hint="@string/txt_email_address"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:maxLength="60"
                        android:maxLines="1"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:textCursorDrawable="@drawable/edt_cursor_color_primary" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>